# mainx

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/gui-qt/: CMakeLists.txt
apps/gui-qt/scmvx/: CMakeLists.txt  app.h  eventinfodialog.cpp  eventinfodialog.h  eventinfodialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  processor.cpp  processor.h  resources.qrc  searchwidget.cpp  searchwidget.h  searchwidget.ui  settings.cpp  settings.h  stationinfodialog.cpp  stationinfodialog.h  stationinfodialog.ui
apps/gui-qt/scmvx/backport/: eventlayer.cpp  eventlayer.h
apps/gui-qt/scmvx/config/: scmvx.cfg
apps/gui-qt/scmvx/descriptions/: scmvx.rst  scmvx.xml
apps/gui-qt/scmvx/map/: currenteventlayer.cpp  currenteventlayer.h  eventheatlayer.cpp  eventheatlayer.h  eventlayer.cpp  eventlayer.h  networklayer.cpp  networklayer.h  scalelayer.cpp  scalelayer.h  stationsymbol.cpp  stationsymbol.h
apps/gui-qt/scmvx/plugins/: CMakeLists.txt  groundmotion.cpp  groundmotion.h
apps/gui-qt/scmvx/seiscomp/plugins/: CMakeLists.txt
apps/gui-qt/scmvx/seiscomp/plugins/mvx/: CMakeLists.txt  groundmotion.cpp  groundmotion.h
apps/python/: CMakeLists.txt  scmagcopy.py  scmagimport.py  scmsdemux.py
apps/python/config/: scmagcopy.cfg
apps/python/descriptions/: scmagcopy.rst  scmagcopy.xml  scmagimport.rst  scmagimport.xml  scmsdemux.rst  scmsdemux.xml
