SET(
	MAPVIEW_GROUNDMOTIONSCALE_EXAMPLE_SOURCES
		groundmotion.cpp
)

SC_ADD_PLUGIN_LIBRARY(MAPVIEW_GROUNDMOTIONSCALE_EXAMPLE gmsexample scmvx)
SC_LINK_LIBRARIES_INTERNAL(gmsexample mvx)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
